syntax="proto3";

package auth;

option go_package = "github.com/Nikita-Smirnov-idk/go_microservices_template_project/pkg/gen/go/sso/v1;ssopb";

service Auth {
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
}

message RegisterRequest {
  int64 user_id = 1; // User Id of the registered user.
}

message RegisterResponse {
  string email = 1; // Email of the user to register.
  string password = 2; // Password of the user to register.
}


message LoginRequest {
  string email = 1; // Email of the user to login.
  string password = 2; // Password of the user to login.
  int32 app_id = 3; // Id of the app to login to.
}

message LoginResponse {
  string token = 1; // Auth token of the logged in user.
}